--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,58 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+
+ 
 }
 
 .logo {
-  font-size: 48px;
+  font-size: 46px;
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 1px 32px;
+  display: flex;
+  margin: 10px auto;
+  flex: initial;
+  align-items: center;
+  
+  
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 5px;
+
 }
 
 a {
-  font-size: 22px;
+  font-size: 15px;
   background: white;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  align-items: center;
+  display: flex;
 }
+
+.left-links {
+  margin-left: -35px;
+  display: flex;
+  justify-content: flex-start;
+  padding-top: 9px;
+  padding-bottom: 9px;
+  
+  
+}
+
+.right-links {
+ margin-right: 5px;
+ padding-top: 9px;
+ padding-bottom: 9px;
+}
+
