--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
 }
 
 .profile-image {
@@ -27,6 +31,9 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+ 
+  
+ 
 }
 
 button {
@@ -45,4 +52,21 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 12px;
+  flex: 0 1 auto;
+
+}
+
+.link-box {
+ margin-left: 9px;
+  display: flex;
+}
+
+.right-cluster {
+display: flex;
+align-items: center;
+gap: 16px;
+margin-right: 8px;
+
 }
