--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +24,21 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.info-box{
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
+  gap: 50px;
+
+}
+.item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  overflow-wrap:normal;
+  text-align: center;
+  
 }
