--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,11 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  display: flex;
+  justify-content: space-around;
+  height: 200px; 
+  padding: 5px;
 }
 
 .icon {
@@ -33,6 +38,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  margin-top: 15px;
+  margin-right: 5px;
 }
 
 .close-button {
@@ -63,4 +71,36 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+
+}
+
+/*cutoff line */
+
+.middle-cluster {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 5px ;
+}
+
+.buttons {
+  display: flex;
+}
+
+.left-cluster {
+  display: flex;
+  flex-direction: column;
+}
+
+.headerx {
+  display: flex;
+  justify-content:space-between ;
+}
+
+.header {
+  font-weight: bold ;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+
 }
