--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,98 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+ 
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 30px;
+  font-size: 30px;
+  font-weight: 900;
+  
+
+  
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex; justify-content: center; align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  width: 500px;
+  flex: 0 0 300px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 30px;
+  
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+  
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 280px;
+  height: 150px;
+  padding: 20px;
+  margin: 0px 0px;
+  flex: 0 1 280px;
+  
+
+  
+
+  
+}
+
+
+/* cut off line */
+
+.middle {
+ display: flex;
+ flex: 1;
+ 
+ 
+  
+}
+
+.cardholder {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 30px;
+  flex-wrap: wrap;
+  padding: 15px;
+  flex: initial;
+  align-items: center;
+  
+}
+
+a {
+  text-decoration: none;
+  font-size: 25px;
+  color: white;
+
+}
+
+.links {
+  
+  
+
 }
