--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,46 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  padding: 7px;
+  
 }
 
 .title {
   background: #e3f4ff;
+  padding: 5px;
+  font-size: 16px;
+  margin-top: 0px;
+  font-weight: 700;
+ 
+
 }
 
 .content {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 10px;
+  margin-top: -5px;
+  mgargin-bototm: 5px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 5px auto;
+  text-align: center;
+  padding: 5px;
+  font-size: 16px;
+  font-weight:530;
+  
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin-left: 140px;
+  margin-bottom: 0px;
+  padding: 5px 20px;
+  font-size: 13px;
+
 }
